--- a/views/index.html
+++ b/views/index.html
@@ -312,7 +312,7 @@ window['CboxReady'] = function (Cbox) {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/6283898698875">
+            <a class="nav-link collapsed" href="https://api.whatsapp.com/send?phone=6281340916978&text=Assalamualikum%0Akamu%20Mau%20gak%20jadi%20pacarku>
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
@@ -324,7 +324,7 @@ window['CboxReady'] = function (Cbox) {
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/zhirr_ajalah">
+            <a class="nav-link collapsed" href="https://instagram.com/rvan0_0">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
