--- a/views/index.html
+++ b/views/index.html
@@ -312,7 +312,7 @@ window['CboxReady'] = function (Cbox) {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://api.whatsapp.com/send?phone=6281340916978&text=Assalamualikum%0Akamu%20Mau%20gak%20jadi%20pacarku>
+            <a class="nav-link collapsed" href="https://wa.me/6281340916978>
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
