--- a/views/about.html
+++ b/views/about.html
@@ -41,7 +41,7 @@
       <h2 class="card-header shadow-sm bg-primary text-white">About Me</h2>
       <div class="card-body">
       <div class="text-center">
-        <img src="https://avatars.githubusercontent.com/u/75620279" class="rounded-circle shadow mb-3" alt="BosRvan" width="150px" height="150px">
+        <img src="home/images/profile-girl.jpg" class="rounded-circle shadow mb-3" alt="BosRvan" width="150px" height="150px">
       </div>
         <p class="card-text text-shadow">Web API Ini dibuat oleh saya sepenuhnya oleh saya juga beberapa bantuan teman saya.<br/>Umur saya baru 17 tahun dan masih menjadi seorang pelajar di SMA NEGERI 9 Pinrang<br/>Senang dari kecil tentang programming<br/>Belajar programming Otodidak, mulai dari YouTube dan web2 lainnya<br/>
         Dengan nama asli saya <b>Muhammad Irfan</b><br/>Bahasa pemrograman yang saya ketahui hanya sedikit, yaitu (HTML/CSS/JavaScript), Python, Java, dan C#<b/><br/>Rest API ini juga dalam tahap pengembangan, jadi mohon doa dan dukungannya. semoga bisa bermanfaat untuk banyak orang<br/>Terimakasih.</p>
