--- a/views/index.html
+++ b/views/index.html
@@ -276,7 +276,7 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseother" class="collapse" aria-labelledby="headingother" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Other Menu</h6>
-            <a class="collapse-item" href="api/nulis?text=ZahirGanteng&apikey=MASUKAN_APIKEY">Nulis Buku</a>
+            <a class="collapse-item" href="api/nulis?text=RvanGanteng&apikey=MASUKAN_APIKEY">Nulis Buku</a>
             <a class="collapse-item" href="api/infonpm?query=Rvan-api&hostname=Rvan&apikey=MASUKAN_APIKEY">Info NPM</a>
             <a class="collapse-item" href="api/infogempa?apikey=MASUKAN_APIKEY">Info Gempa Terkini</a>
             <a class="collapse-item" href="api/infocuaca?provinsi=jakarta&apikey=MASUKAN_APIKEY">Info Cuaca Indonesia</a>
@@ -318,7 +318,7 @@ window['CboxReady'] = function (Cbox) {
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/BosRvan">
+            <a class="nav-link collapsed" href="https://github.com/RvanSans">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
