--- a/views/index.html
+++ b/views/index.html
@@ -312,7 +312,7 @@ window['CboxReady'] = function (Cbox) {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/6281340916978>
+            <a class="nav-link collapsed" href="https://wa.me/6281340916978">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
