--- a/views/index.html
+++ b/views/index.html
@@ -48,9 +48,9 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseBootstrap" class="collapse" aria-labelledby="headingBootstrap" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Media Features</h6>
-            <a class="collapse-item" href="api/fbdown/?url=MASUKIN_URL&apikey=MASUKIN_APIKEY">Facebook Downloader</a>
-            <a class="collapse-item" href="api/tiktod/?url=MASUKIN_URL&apikey=MASUKIN_APIKEY">Tiktok Downloader</a>
-            <a class="collapse-item" href="api/tiktod/stalk/?username=MASUKIN_USERNAME&apikey=MASUKIN_APIKEY">Tiktok Stalk</a>
+            <a class="collapse-item" href="api/fbdown/?url=Url&apikey=beta">Facebook Downloader</a>
+            <a class="collapse-item" href="api/tiktod/?url=Url&apikey=beta">Tiktok Downloader</a>
+            <a class="collapse-item" href="api/tiktod/stalk/?username=jessnolimit99&apikey=beta">Tiktok Stalk</a>
             </div>
         </div>
       </li>
@@ -63,17 +63,17 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseIslamic" class="collapse" aria-labelledby="headingIslamic" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Islamic  API</h6>
-            <a class="collapse-item" href="api/hadits?kitab=bukhari&nomor=52&apikey=MASUKAN_APIKEY">Hadits Shahih</a>
-            <a class="collapse-item" href="api/quran?surah=1&ayat=2&apikey=MASUKAN_APIKEY">Al Qur'an</a>
-            <a class="collapse-item" href="api/muslim/tahlil?apikey=MASUKAN_APIKEY">Doa Tahlil</a>
-            <a class="collapse-item" href="api/muslim/wirid?apikey=MASUKAN_APIKEY">Doa Wirid</a>
-            <a class="collapse-item" href="api/muslim/asmaulhusna?apikey=MASUKAN_APIKEY">Asmaul Husna</a>
-            <a class="collapse-item" href="api/muslim/doaharian?apikey=MASUKAN_APIKEY">Doa Harian</a>
-            <a class="collapse-item" href="api/muslim/ayatkursi?apikey=MASUKAN_APIKEY">Ayat Kursi</a>
-            <a class="collapse-item" href="api/kisahnabi?nabi=muhammad&apikey=MASUKAN_APIKEY">Kisah Nabi</a>
-            <a class="collapse-item" href="api/muslim/niatshalat?apikey=MASUKAN_APIKEY">Niat Shalat</a>
-            <a class="collapse-item" href="api/muslim/bacaanshalat?apikey=MASUKAN_APIKEY">Bacaan Shalat</a>
-            <a class="collapse-item" href="api/jadwalshalat?kota=jakartautara&apikey=MASUKAN_APIKEY">Jadwal Shalat</a>
+            <a class="collapse-item" href="api/hadits?kitab=bukhari&nomor=52&apikey=beta">Hadits Shahih</a>
+            <a class="collapse-item" href="api/quran?surah=1&ayat=2&apikey=beta">Al Qur'an</a>
+            <a class="collapse-item" href="api/muslim/tahlil?apikey=beta">Doa Tahlil</a>
+            <a class="collapse-item" href="api/muslim/wirid?apikey=beta">Doa Wirid</a>
+            <a class="collapse-item" href="api/muslim/asmaulhusna?apikey=beta>Asmaul Husna</a>
+            <a class="collapse-item" href="api/muslim/doaharian?apikey=beta">Doa Harian</a>
+            <a class="collapse-item" href="api/muslim/ayatkursi?apikey=beta">Ayat Kursi</a>
+            <a class="collapse-item" href="api/kisahnabi?nabi=muhammad&apikey=beta">Kisah Nabi</a>
+            <a class="collapse-item" href="api/muslim/niatshalat?apikey=beta">Niat Shalat</a>
+            <a class="collapse-item" href="api/muslim/bacaanshalat?apikey=beta">Bacaan Shalat</a>
+            <a class="collapse-item" href="api/jadwalshalat?kota=jakartautara&apikey=beta">Jadwal Shalat</a>
           </div>
         </div>
       </li>
@@ -86,11 +86,11 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseKodepos" class="collapse" aria-labelledby="headingKodepos" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Images API</h6>
-            <a class="collapse-item" href="api/wallpaper/teknologi?apikey=MASUKAN_APIKEY">Wallpaper Teknologi</a>
-            <a class="collapse-item" href="api/wallpaper/programming?apikey=MASUKAN_APIKEY">Wallpaper Programming</a>
-            <a class="collapse-item" href="api/wallpaper/cyberspace?apikey=MASUKAN_APIKEY">Wallpaper CyberSpace</a>
-            <a class="collapse-item" href="api/wallpaper/muslim?apikey=MASUKAN_APIKEY">Wallpaper Muslim</a>
-            <a class="collapse-item" href="api/wallpaper/pegunungan?apikey=MASUKAN_APIKEY">Wallpaper Mountain View</a>
+            <a class="collapse-item" href="api/wallpaper/teknologi?apikey=beta">Wallpaper Teknologi</a>
+            <a class="collapse-item" href="api/wallpaper/programming?apikey=beta">Wallpaper Programming</a>
+            <a class="collapse-item" href="api/wallpaper/cyberspace?apikey=beta">Wallpaper CyberSpace</a>
+            <a class="collapse-item" href="api/wallpaper/muslim?apikey=beta">Wallpaper Muslim</a>
+            <a class="collapse-item" href="api/wallpaper/pegunungan?apikey=beta">Wallpaper Mountain View</a>
             </div>
             </div>
             </li>
@@ -103,12 +103,12 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseGithub" class="collapse" aria-labelledby="headingGithub" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Random API</h6>
-            <a class="collapse-item" href="api/randomquote?apikey=MASUKIN_APIKEY">Quotes</a>
-            <a class="collapse-item" href="api/randomquote/muslim?apikey=MASUKIN_APIKEY">Quotes Islami</a>
-            <a class="collapse-item" href="api/quotes/kanye?apikey=MASUKIN_APIKEY">Quotes Kanye</a>
-            <a class="collapse-item" href="api/random/asmaulhusna?apikey=MASUKIN_APIKEY">Asmaul Husna</a>
-            <a class="collapse-item" href="api/random/meme?apikey=MASUKIN_APIKEY">Meme</a>
-            <a class="collapse-item" href="api/random/wallpaper?apikey=MASUKIN_APIKEY">Wallpaper</a>
+            <a class="collapse-item" href="api/randomquote?apikey=beta">Quotes</a>
+            <a class="collapse-item" href="api/randomquote/muslim?apikey=beta">Quotes Islami</a>
+            <a class="collapse-item" href="api/quotes/kanye?apikey=beta">Quotes Kanye</a>
+            <a class="collapse-item" href="api/random/asmaulhusna?apikey=beta">Asmaul Husna</a>
+            <a class="collapse-item" href="api/random/meme?apikey=beta">Meme</a>
+            <a class="collapse-item" href="api/random/wallpaper?apikey=beta">Wallpaper</a>
           </div>
         </div>
       </li>
@@ -121,16 +121,16 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseText" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Photooxy API</h6>
-            <a class="collapse-item" href="api/textmaker?text=halo&text2=hai&theme=glitch&apikey=MASUKIN_APIKEY">Glitch</a>
-            <a class="collapse-item" href="api/textmaker?text=halo&text2=hai&text3=gwganteng&theme=google-suggestion&apikey=MASUKIN_APIKEY">Google Suggestion</a>
-            <a class="collapse-item" href="api/textmaker/game?text=halo&text2=hai&theme=pubg&apikey=MASUKIN_APIKEY">PUBG</a>
-            <a class="collapse-item" href="api/textmaker/game?text=halo&text2=hai&theme=battlefield&apikey=MASUKIN_APIKEY">BattleField</a>
-            <a class="collapse-item" href="api/textmaker/senja?text=Zhirrr&theme=coffee-cup&apikey=MASUKIN_APIKEY">Coffee Cup</a>
-            <a class="collapse-item" href="api/textmaker/senja?text=Zhirrr&theme=coffee-cup2&apikey=MASUKIN_APIKEY">Coffee Cup 2</a>
-            <a class="collapse-item" href="api/textmaker/metallic?text=Zhirrr&theme=neon&apikey=MASUKIN_APIKEY">Neon</a>
-            <a class="collapse-item" href="api/textmaker/metallic?text=Zhirrr&theme=glow&apikey=MASUKIN_APIKEY">Glow</a>
-            <a class="collapse-item" href="api/textmaker/alam?text=Zhirrr&theme=summer&apikey=MASUKIN_APIKEY">Summer</a>
-            <a class="collapse-item" href="api/textmaker/alam?text=Zhirrr&theme=flower&apikey=MASUKIN_APIKEY">Flower</a>
+            <a class="collapse-item" href="api/textmaker?text=part1&text2=part2&theme=glitch&apikey=beta">Glitch</a>
+            <a class="collapse-item" href="api/textmaker?text=part2&text2=part3&text3=part4&theme=google-suggestion&apikey=beta">Google Suggestion</a>
+            <a class="collapse-item" href="api/textmaker/game?text=part2&text2=part3&theme=pubg&apikey=beta">PUBG</a>
+            <a class="collapse-item" href="api/textmaker/game?text=part2&text2=part3&theme=battlefield&apikey=beta">BattleField</a>
+            <a class="collapse-item" href="api/textmaker/senja?text=Mengsedih&theme=coffee-cup&apikey=beta">Coffee Cup</a>
+            <a class="collapse-item" href="api/textmaker/senja?text=Mengsedih&theme=coffee-cup2&apikey=beta">Coffee Cup 2</a>
+            <a class="collapse-item" href="api/textmaker/metallic?text=Mengsedih&theme=neon&apikey=beta">Neon</a>
+            <a class="collapse-item" href="api/textmaker/metallic?text=Mengsedih&theme=glow&apikey=beta">Glow</a>
+            <a class="collapse-item" href="api/textmaker/alam?text=Mengsedih&theme=summer&apikey=beta">Summer</a>
+            <a class="collapse-item" href="api/textmaker/alam?text=Mengsedih&theme=flower&apikey=beta">Flower</a>
           </div>
         </div>
       </li>
@@ -143,8 +143,8 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseAnime" class="collapse" aria-labelledby="headingAnime" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Anime/Manga Features</h6>
-            <a class="collapse-item" href="api/anime/kusonime?search=planetarian&apikey=MASUKAN_APIKEY">Kusonime</a>
-            <a class="collapse-item" href="api/manga?search=kimetsu no yaiba&apikey=MASUKAN_APIKEY">Manga</a>
+            <a class="collapse-item" href="api/anime/kusonime?search=planetarian&apikey=beta">Kusonime</a>
+            <a class="collapse-item" href="api/manga?search=kimetsu no yaiba&apikey=beta">Manga</a>
             
           </div>
         </div>
@@ -157,8 +157,8 @@ window['CboxReady'] = function (Cbox) {
                 <div id="collapseGames" class="collapse" aria-labelledby="headingForm" data-parent="#accordionSidebar">
                     <div class="py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Games Features</h6>
-            <a class="collapse-item" href="/api/kuis/caklontong?apikey=MASUKAN_APIKEY">Cak Lontong</a>
-            <a class="collapse-item" href="/api/kuis/tebakgambar?apikey=MASUKAN_APIKEY">Tebak Gambar</a>
+            <a class="collapse-item" href="/api/kuis/caklontong?apikey=beta">Cak Lontong</a>
+            <a class="collapse-item" href="/api/kuis/tebakgambar?apikey=beta">Tebak Gambar</a>
             </div>
             </div>
         </li>
@@ -171,23 +171,23 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseother" class="collapse" aria-labelledby="headingother" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Other Menu</h6>
-            <a class="collapse-item" href="api/nulis?text=ZahirGanteng&apikey=MASUKAN_APIKEY">Nulis Buku</a>
-            <a class="collapse-item" href="api/infonpm?query=zhirrr-api&hostname=zhirrr&apikey=MASUKAN_APIKEY">Info NPM</a>
-            <a class="collapse-item" href="api/infogempa?apikey=MASUKAN_APIKEY">Info Gempa</a>
-            <a class="collapse-item" href="api/cuaca?kabupaten=kab bungo&apikey=MASUKAN_APIKEY">Info Cuaca</a>
-            <a class="collapse-item" href="api/covidindo?apikey=MASUKAN_APIKEY">Covid Indo</a>
-            <a class="collapse-item" href="api/covidworld?apikey=MASUKAN_APIKEY">Covid World</a>
-            <a class="collapse-item" href="api/short/tiny?url=google.com&apikey=MASUKAN_APIKEY">Short Link</a>
-            <a class="collapse-item" href="api/wikipedia?search=jembatan&apikey=MASUKAN_APIKEY">Wikipedia</a>
-            <a class="collapse-item" href="api/drakorasia?search=tale&apikey=MASUKAN_APIKEY">Drakor Asia</a>
-            <a class="collapse-item" href="api/fakedata?country=en&apikey=MASUKAN_APIKEY">Fake Data</a>
-            <a class="collapse-item" href="api/hilih?kata=aku kan ganteng banget&apikey=MASUKAN_APIKEY">Kata Hilih</a>
-            <a class="collapse-item" href="api/liriklagu?lagu=sayang&apikey=MASUKAN_APIKEY">Lirik Lagu</a>
-            <a class="collapse-item" href="api/chordlagu?lagu=sayang&apikey=MASUKAN_APIKEY">Chord Lagu</a>
-            <a class="collapse-item" href="api/kbbi?kata=pohon&apikey=MASUKAN_APIKEY">KBBI</a>
-            <a class="collapse-item" href="api/kodepos?kota=jakarta&apikey=MASUKAN_APIKEY">Kode Pos</a>
-            <a class="collapse-item" href="api/translate?kata=hi&apikey=MASUKAN_APIKEY">Translate</a>
-            <a class="collapse-item" href="api/gabut?apikey=MASUKAN_APIKEY">Gabut</a>
+            <a class="collapse-item" href="api/nulis?text=Part2bang&apikey=beta">Nulis Buku</a>
+            <a class="collapse-item" href="api/infonpm?query=xxxx&hostname=hostnye&apikey=beta">Info NPM</a>
+            <a class="collapse-item" href="api/infogempa?apikey=beta">Info Gempa</a>
+            <a class="collapse-item" href="api/cuaca?kabupaten=kab bungo&apikey=beta">Info Cuaca</a>
+            <a class="collapse-item" href="api/covidindo?apikey=beta">Covid Indo</a>
+            <a class="collapse-item" href="api/covidworld?apikey=beta">Covid World</a>
+            <a class="collapse-item" href="api/short/tiny?url=google.com&apikey=beta">Tinyurl</a>
+            <a class="collapse-item" href="api/wikipedia?search=jembatan&apikey=beta">Wikipedia</a>
+            <a class="collapse-item" href="api/drakorasia?search=tale&apikey=beta">Drakor Asia</a>
+            <a class="collapse-item" href="api/fakedata?country=en&apikey=beta">Fake Data</a>
+            <a class="collapse-item" href="api/hilih?kata=beta&apikey=beta">Kata Hilih</a>
+            <a class="collapse-item" href="api/liriklagu?lagu=sayang&apikey=beta">Lirik Lagu</a>
+            <a class="collapse-item" href="api/chordlagu?lagu=sayang&apikey=beta">Chord Lagu</a>
+            <a class="collapse-item" href="api/kbbi?kata=kayu&apikey=beta">KBBI</a>
+            <a class="collapse-item" href="api/kodepos?kota=medan&apikey=beta">Kode Pos</a>
+            <a class="collapse-item" href="api/translate?kata=help&apikey=beta">Translate</a>
+            <a class="collapse-item" href="api/gabut?apikey=beta">Gabut</a>
           </div>
         </div>
       </li>
@@ -222,7 +222,7 @@ window['CboxReady'] = function (Cbox) {
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Zhirrr</b></div>
+      <div class="version"><b>Made With ♥️ By Ea</b></div>
     </ul>
     <!-- Sidebar -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -240,7 +240,7 @@ window['CboxReady'] = function (Cbox) {
                 aria-labelledby="searchDropdown">
                 <form class="navbar-search">
                   <div class="input-group">
-                    <input type="text" class="form-control bg-light border-1 small" placeholder="Search for..."
+                    <input type="text" class="form-control bg-light border-1 small" placeholder="Search.."
                       aria-label="Search" aria-describedby="basic-addon2" style="border-color: #3f51b5;">
                     <div class="input-group-append">
                       <button class="btn btn-primary" type="button">
